--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<html>
+  <head>
+    <title>The List App - Support</title>
+  </head>
+  <body>
+    <h1>The List App - Support</h1>
+  </body>
+</html>
