--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
   </head>
   <body>
     <h1>The List App - Support</h1>
+    <a>Insert link to app on app store here</a>
+    <a href="mailto:listappqed@gmail.com">Questions? Send us an email</a>
   </body>
 </html>
