--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   </head>
   <body>
     <h1>The List App - Support</h1>
-    <a>Insert link to app on app store here</a>
-    <a href="mailto:listappqed@gmail.com">Questions? Send us an email</a>
+    <div>
+      <a>Insert link to app on app store here</a>
+      <a href="mailto:listappqed@gmail.com">Questions? Send us an email</a>
+    </div>
   </body>
 </html>
