--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>The List App - Support</title>
+    <title>The List App</title>
   </head>
   <body>
-    <h1>The List App - Support</h1>
+    <h1>The List App</h1>
     <div>
       <a>Insert link to app on app store here</a>
       <a href="mailto:listappqed@gmail.com">Questions? Send us an email</a>
