--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>The List App</title>
   </head>
   <body>
-    <h1>The List App</h1>
+    <h1>The List</h1>
     <div>
       <a>Insert link to app on app store here</a>
       <a href="mailto:listappqed@gmail.com">Questions? Send us an email</a>
