--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <html>
   <head>
     <title>The List App</title>
+    <style>
+      #apple-store { height: 65px; } 
+    </style>
   </head>
   <body>
     <h1>The List</h1>
     <div>
       <a href="https://apps.apple.com/us/app/the-list/id1541569736">
-        <img src="/images/apple-store.png" alt="Apple Store" />
+        <img id="apple-store" src="/images/apple-store.png" alt="Apple Store" />
       </a>
-      <a href="mailto:listappqed@gmail.com">Questions? Send us an email</a>
+      <p>
+        Questions? 
+        <a href="mailto:listappqed@gmail.com">
+          Send us an email.
+        </a>
+      </p>
     </div>
   </body>
 </html>
