--- a/index.html
+++ b/index.html
@@ -2,21 +2,28 @@
   <head>
     <title>The List App</title>
     <style>
+      #screenshots { width: 500px; margin: 0 auto; }
       #apple-store { height: 65px; } 
     </style>
   </head>
   <body>
     <h1>The List</h1>
+    <div id="screenshots">
+      <img src="screenshot1.png" />
+      <img src="screenshot2.png" />
+      <img src="screenshot3.png" />
+      <img src="screenshot4.png" />
+    </div>
     <div>
       <a href="https://apps.apple.com/us/app/the-list/id1541569736">
         <img id="apple-store" src="/images/apple-store.png" alt="Apple Store" />
       </a>
-      <p>
-        Questions? 
-        <a href="mailto:listappqed@gmail.com">
-          Send us an email.
-        </a>
-      </p>
     </div>
+    <p>
+      Questions? 
+      <a href="mailto:listappqed@gmail.com">
+        Send us an email.
+      </a>
+    </p>
   </body>
 </html>
