--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <h1>The List</h1>
     <div id="screenshots">
-      <img src="screenshot1.png" />
-      <img src="screenshot2.png" />
-      <img src="screenshot3.png" />
-      <img src="screenshot4.png" />
+      <img src="/images/screenshot1.png" />
+      <img src="/images/screenshot2.png" />
+      <img src="/images/screenshot3.png" />
+      <img src="/images/screenshot4.png" />
     </div>
     <div>
       <a href="https://apps.apple.com/us/app/the-list/id1541569736">
