--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <title>The List App</title>
     <style>
-      #screenshots { width: 500px; margin: 0 auto; }
+      #screenshots { width: 900px; margin: 0 auto; }
+      #screenshots > img { height: 300px }
       #apple-store { height: 65px; } 
     </style>
   </head>
