--- a/index.html
+++ b/index.html
@@ -2,29 +2,32 @@
   <head>
     <title>The List App</title>
     <style>
-      #screenshots { width: 900px; margin: 0 auto; }
-      #screenshots > img { height: 300px }
+      #main        { width: 923px; margin: 0 auto; text-align: center; }
+      #screenshots { width: 923px; margin: 0 auto; }
+      #screenshots > img { height: 500px; }
       #apple-store { height: 65px; } 
     </style>
   </head>
   <body>
-    <h1>The List</h1>
-    <div id="screenshots">
-      <img src="/images/screenshot1.png" />
-      <img src="/images/screenshot2.png" />
-      <img src="/images/screenshot3.png" />
-      <img src="/images/screenshot4.png" />
+    <div id='main'>
+      <h1>The List</h1>
+      <div id="screenshots">
+        <img src="/images/screenshot1.png" />
+        <img src="/images/screenshot2.png" />
+        <img src="/images/screenshot3.png" />
+        <img src="/images/screenshot4.png" />
+      </div>
+      <div>
+        <a href="https://apps.apple.com/us/app/the-list/id1541569736">
+          <img id="apple-store" src="/images/apple-store.png" alt="Apple Store" />
+        </a>
+      </div>
+      <p>
+        Questions? 
+        <a href="mailto:listappqed@gmail.com">
+          Send us an email.
+        </a>
+      </p>
     </div>
-    <div>
-      <a href="https://apps.apple.com/us/app/the-list/id1541569736">
-        <img id="apple-store" src="/images/apple-store.png" alt="Apple Store" />
-      </a>
-    </div>
-    <p>
-      Questions? 
-      <a href="mailto:listappqed@gmail.com">
-        Send us an email.
-      </a>
-    </p>
   </body>
 </html>
