--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
     <title>The List App</title>
     <style>
-      #main        { width: 923px; margin: 0 auto; text-align: center; }
-      #screenshots { width: 923px; margin: 0 auto; }
-      #screenshots > img { height: 500px; }
-      #apple-store { height: 65px; } 
+      #main        { min-width: 945px; margin: 0 auto; text-align: center; }
+      #screenshots { min-width: 945px; margin: 0 auto; }
+      #screenshots > img { height: 500px; border-radius: 15px; }
+      #apple-store { height: 65px; margin-top: 20px; } 
     </style>
   </head>
   <body>
