--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>The List App</title>
     <style>
+      body         { font-size: x-large; font-family: san-serif; }
       #main        { min-width: 945px; margin: 0 auto; text-align: center; }
       #screenshots { min-width: 945px; margin: 0 auto; }
       #screenshots > img { height: 500px; border-radius: 15px; }
