--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
       .header      { color: red; }
       #main        { min-width: 473px; margin: 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
-      .screenshots > img { height: 500px; border-radius: 15px; }
+      .screenshots > img { height: 700px; border-radius: 30px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 20px; } 
     </style>
   </head>
   <body>
     <div id='main'>
       <h1 class='header'>The List</h1>
+      <h3>A record of all Fatal Police Shootings in the U.S. from 2015 to present day.</h3>
+      <p>As compiled by the Washington Post. See the following link:</p>
+      <p><a href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a></p>
       <div class='screenshots'>
         <img src='/images/screenshot3.png' />
         <img src='/images/screenshot4.png' />
