--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>The List App</title>
     <style>
-      body         { font-size: x-large; font-family: san-serif; }
+      body         { font-size: x-large; font-family: sans-serif; }
       .header      { color: red; }
       #main        { min-width: 473px; margin: 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
