--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>
       body         { font-size: x-large; font-family: sans-serif; }
       .header      { color: red; }
+      .blurb       { max-width: 800px; margin: 0 auto; }
       #main        { min-width: 473px; margin: 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots > img { height: 700px; border-radius: 30px; padding: 8px; }
@@ -13,8 +14,10 @@
   <body>
     <div id='main'>
       <h1 class='header'>The List</h1>
-      <h3>A record of all Fatal Police Shootings in the U.S. from 2015 to present day.</h3>
-      <p>As compiled by the Washington Post. See the following link:</p>
+      <div class='blurb'>
+        <h3>A record of all Fatal Police Shootings in the U.S. from 2015 to present day.</h3>
+        <p>As compiled by the Washington Post. See the following link:</p>
+      </div>
       <p><a href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a></p>
       <div class='screenshots'>
         <img src='/images/screenshot3.png' />
