--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>The List App</title>
     <style>
       body         { font-size: x-large; font-family: sans-serif; }
-      .header      { color: red; }
+      .header      { color: red; margin-top: 5px; }
       .blurb       { max-width: 800px; margin: 0 auto; }
       #main        { min-width: 473px; margin: 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
