--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       </div>
       <p><a href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a></p>
       <div class='screenshots'>
-        <img src='/images/screenshot3.png' />
-        <img src='/images/screenshot4.png' />
+        <a href='/images/screenshot3.png'><img src='/images/screenshot3.png' /></a>
+        <a href='/images/screenshot4.png'><img src='/images/screenshot4.png' /></a>
       </div>
       <div class='screenshots'>
-        <img src='/images/screenshot1.png' />
-        <img src='/images/screenshot2.png' />
+        <a href='/images/screenshot1.png'><img src='/images/screenshot1.png' /></a>
+        <a href='/images/screenshot2.png'><img src='/images/screenshot2.png' /></a>
       </div>
       <div>
         <a href='https://apps.apple.com/us/app/the-list/id1541569736'>
