--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       .blurb       { max-width: 800px; margin: 0 auto; }
       #main        { min-width: 473px; margin: 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
-      .screenshots > img { height: 700px; border-radius: 30px; padding: 8px; }
+      .screenshots img { height: 700px; border-radius: 30px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 20px; } 
     </style>
   </head>
