--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots img { height: 700px; border-radius: 30px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 20px; } 
+      #footer      { margin-bottom: 20px; }
     </style>
   </head>
   <body>
@@ -40,5 +41,6 @@
         </a>
       </p>
     </div>
+    <div id='footer'></div>
   </body>
 </html>
