--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots img { height: 700px; border-radius: 30px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 25px; } 
-      #footer      { margin-bottom: 20px; }
     </style>
   </head>
   <body>
     <div id='main'>
-      <h1 class='header'>The List</h1>
+
+      <h1 class='header'>
+        The List
+      </h1>
+
       <div class='blurb'>
         <h3>A record of all Fatal Police Shootings in the U.S. from 2015 to present day.</h3>
         <p>As compiled by the Washington Post. See the following link:</p>
       </div>
-      <p><a href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a></p>
+      <p>
+        <a href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a>
+      </p>
+
       <div class='screenshots'>
         <a href='/images/screenshot3.png'><img src='/images/screenshot3.png' /></a>
         <a href='/images/screenshot4.png'><img src='/images/screenshot4.png' /></a>
@@ -33,14 +39,15 @@
           <img id='apple-store' src='/images/apple-store.png' alt='Apple Store' />
         </a>
       </div>
+
       <p>
-      Questions?
-      <br /> 
+        Questions?
+        <br /> 
         <a href='mailto:listappqed@gmail.com'>
           Send us an email.
         </a>
       </p>
+
     </div>
-    <div id='footer'></div>
   </body>
 </html>
