--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots img { height: 700px; border-radius: 30px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 25px; } 
+      .questions   { margin-bottom: 20px; }
     </style>
   </head>
   <body>
@@ -40,7 +41,7 @@
         </a>
       </div>
 
-      <p>
+      <p class='questions'>
         Questions?
         <br /> 
         <a href='mailto:listappqed@gmail.com'>
