--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots img { height: 700px; border-radius: 30px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 25px; } 
-      .questions   { margin-bottom: 40px; }
+      .questions   { padding-bottom: 40px; }
     </style>
   </head>
   <body>
