--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
       <div class='blurb'>
         <h3>A record of all Fatal Police Shootings in the U.S. from 2015 to present day.</h3>
-        <p>As compiled by the Washington Post. See the following link:</p>
+        <p>Data compiled by the Washington Post:</p>
+        <p>
+          <a href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a>
+        </p>
       </div>
-      <p>
-        <a href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a>
-      </p>
 
       <div class='screenshots'>
         <a href='/images/screenshot3.png'><img src='/images/screenshot3.png' /></a>
