--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>
       body         { font-size: x-large; font-family: sans-serif; }
       .header      { color: red; margin-top: 15px; }
+      #app-icon    { border-radius: 30px; height: 65px; }
       .blurb       { max-width: 750px; margin: 0 auto; }
       #main        { min-width: 473px; margin: 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
@@ -16,6 +17,7 @@
     <div id='main'>
 
       <h1 class='header'>
+        <img id='app-icon' src='/images/TheListAppIcon.jpg' alt='The List App Icon' />
         The List
       </h1>
 
