--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         Questions?
         <br /> 
         <a href='mailto:listappqed@gmail.com'>
-          Send us an email.
+          Send us an email
         </a>
       </p>
 
