--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <h1 class='header'>
         <img id='app-icon' src='/images/TheListAppIcon.jpg' alt='The List App Icon' />
-        The List
+        <span class='header-text'>The List</span>
       </h1>
 
       <div class='blurb'>
