--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       body         { font-size: x-large; font-family: sans-serif; }
       .header      { color: red; margin-top: 15px; }
       #app-icon    { border-radius: 22px; height: 100px; vertical-align: middle; }
+      .header-text { vertical-align: middle; }
       .blurb       { max-width: 750px; margin: 0 auto; }
       #main        { min-width: 473px; margin: 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
