--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
       body         { font-size: x-large; font-family: sans-serif; }
       .header      { color: red; margin-top: 15px; }
+      .data-link   { color: blue; text-decoration: none; }
       #app-icon    { border-radius: 22px; height: 100px; vertical-align: middle; }
       .header-text { vertical-align: middle; }
       .blurb       { max-width: 750px; margin: 0 auto; }
@@ -30,7 +31,7 @@
         <h3>A record of all Fatal Police Shootings in the U.S. from 2015 to present day.</h3>
         <p>Data compiled by the Washington Post:</p>
         <p>
-          <a href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a>
+          <a class='data-link' href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a>
         </p>
       </div>
 
