--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       .data-link   { color: blue; text-decoration: none; }
       #app-icon    { border-radius: 22px; height: 100px; vertical-align: middle; }
       .header-text { vertical-align: middle; }
-      .blurb       { max-width: 750px; margin: 0 auto; }
+      .blurb       { max-width: 750px; margin: 0 auto; font-size: smaller; }
       #main        { min-width: 473px; margin: 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots img { height: 700px; border-radius: 30px; padding: 8px; }
@@ -29,8 +29,8 @@
 
       <div class='blurb'>
         <h3>A record of all Fatal Police Shootings in the U.S. from 2015 to present day.</h3>
-        <p>Data compiled by the Washington Post:</p>
         <p>
+        Data compiled by the Washington Post: <br />
           <a class='data-link' href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a>
         </p>
       </div>
