--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       body         { font-size: x-large; font-family: sans-serif; }
       .header      { color: red; margin-top: 15px; }
-      .data-link   { color: blue; text-decoration: none; }
+      .data-link   { color: red; text-decoration: none; }
       #app-icon    { border-radius: 22px; height: 100px; vertical-align: middle; }
       .header-text { vertical-align: middle; }
       .blurb       { max-width: 750px; margin: 0 auto; font-size: smaller; }
