--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       .screenshots img { height: 700px; border-radius: 30px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 25px; } 
       .questions   { padding-bottom: 40px; }
+      .questions a { color: red; text-decoration: none; }
     </style>
   </head>
   <body>
