--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       #main        { min-width: 473px; margin: 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots img { height: 700px; border-radius: 30px; padding: 8px; }
-      #apple-store { height: 65px; margin-top: 25px; } 
+      #apple-store { height: 65px; margin-bottom: 15px; } 
       .questions   { padding-bottom: 40px; }
       .questions a { color: red; text-decoration: none; }
     </style>
