--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       .header-text { vertical-align: middle; }
       .blurb       { max-width: 750px; margin: 0 auto; }
       .blurb p     { font-size: smaller; }
+      .blurb p > a { font-size: smaller; }
       #main        { min-width: 473px; margin: 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots img { height: 700px; border-radius: 30px; padding: 8px; }
