--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       #app-icon    { border-radius: 22px; height: 100px; vertical-align: middle; }
       .header-text { vertical-align: middle; }
       .blurb       { max-width: 750px; margin: 0 auto; }
-      .blurb p     { font-size: smaller; }
+      .blurb p     { font-size: smaller; color: #555; }
       .blurb p > a { font-size: smaller; }
       #main        { min-width: 473px; margin: 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
