--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
       .header      { color: red; margin-top: 15px; }
       .data-link   { color: red; text-decoration: none; }
       #app-icon    { border-radius: 22px; height: 100px; vertical-align: middle; }
-      .header-text { vertical-align: middle; }
+      .header-text { vertical-align: middle; font-size: larger; }
       .blurb       { max-width: 700px; margin: 0 auto; }
+      .blurb h3    { font-size: larger; }
       .blurb p     { font-size: smaller; color: #555; }
       .blurb p > a { font-size: smaller; }
       #main        { min-width: 473px; margin: 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots img { height: 700px; border-radius: 30px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 5px; margin-bottom: 20px; } 
-      .questions   { padding-bottom: 40px; }
+      .questions   { padding-bottom: 80px; }
       .questions a { color: red; text-decoration: none; }
     </style>
   </head>
