--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       .screenshots img { height: 700px; border-radius: 45px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 5px; margin-bottom: 20px; } 
       .questions   { padding-bottom: 80px; }
-      .questions a { color: red; text-decoration: none; }
+      .questions a { color: red; text-decoration: none; font-size: larger; }
     </style>
   </head>
   <body>
