--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       .blurb h3    { font-size: larger; }
       .blurb p     { font-size: smaller; color: #555; }
       .blurb p > a { font-size: smaller; }
-      #main        { min-width: 473px; margin: 0 auto; text-align: center; }
+      #main        { min-width: 473px; margin: 40px auto 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots img { height: 700px; border-radius: 45px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 5px; margin-bottom: 20px; } 
