index.html: moving data source to bottom of page

--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
 
       <div class='blurb'>
         <h3>A record of all Fatal Police Shootings in the U.S. from 2015 to present day.</h3>
-        <p>
-        Data compiled by the Washington Post: <br />
-          <a class='data-link' href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a>
-        </p>
       </div>
 
       <div>
@@ -60,6 +56,11 @@
         <a href='mailto:listappqed@gmail.com'>
           Send us an email
         </a>
+      </p>
+
+      <p class='compiled'>
+        Data compiled by the Washington Post: <br />
+        <a class='data-link' href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a>
       </p>
 
     </div>
