index.html: moving data source to bottom of page

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
       .header-text { vertical-align: middle; font-size: larger; }
       .blurb       { max-width: 700px; margin: 0 auto; }
       .blurb h3    { font-size: larger; }
-      .blurb p     { font-size: smaller; color: #555; }
-      .blurb p > a { font-size: smaller; }
       #main        { min-width: 473px; margin: 40px auto 0 auto; text-align: center; }
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots img { height: 700px; border-radius: 45px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 5px; margin-bottom: 20px; } 
-      .questions   { padding-bottom: 80px; }
       .questions a { color: red; text-decoration: none; font-size: larger; }
+      .compiled    { font-size: smaller; color: #555; padding-bottom: 80px;}
+      .compiled p > a { font-size: smaller; }
     </style>
   </head>
   <body>
