index.html: moving data source to bottom of page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
       .screenshots img { height: 700px; border-radius: 45px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 5px; margin-bottom: 20px; } 
       .questions a { color: red; text-decoration: none; font-size: larger; }
-      .compiled    { font-size: smaller; color: #555; padding-bottom: 80px;}
-      .compiled p > a { font-size: smaller; }
+      .compiled    { font-size: smaller; }
+      .compiled-link { font-size: smaller; padding-bottom: 80px;}
+      .compiled-link a { font-size: smaller; }
     </style>
   </head>
   <body>
@@ -51,14 +52,17 @@
 
       <p class='questions'>
         Questions?
-        <br /> 
+      </p>
+      <p class='questions'>
         <a href='mailto:listappqed@gmail.com'>
           Send us an email
         </a>
       </p>
 
       <p class='compiled'>
-        Data compiled by the Washington Post: <br />
+        Data compiled by the Washington Post: 
+      </p>
+      <p class='compiled-link'>
         <a class='data-link' href='https://github.com/washingtonpost/data-police-shootings'>https://github.com/washingtonpost/data-police-shootings</a>
       </p>
 
