index.html: moving data source to bottom of page

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots img { height: 700px; border-radius: 45px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 5px; margin-bottom: 20px; } 
-      .questions a { color: red; text-decoration: none; font-size: larger; }
-      .compiled    { font-size: smaller; }
-      .compiled-link { font-size: smaller; padding-bottom: 80px;}
-      .compiled-link a { font-size: smaller; }
+      .questions a { color: red; text-decoration: none; font-size: larger; margin-bottom: 7px; }
+      .questions-link { color: red; text-decoration: none; font-size: larger; margin-top: 0; }
+      .compiled    { font-size: smaller; margin-top: 45px; margin-bottom: 7px; }
+      .compiled-link { font-size: smaller; padding-bottom: 80px; margin-top: 0; }
+      .compiled-link a { font-size: smaller; color: blue; }
     </style>
   </head>
   <body>
@@ -53,7 +54,7 @@
       <p class='questions'>
         Questions?
       </p>
-      <p class='questions'>
+      <p class='questions-link'>
         <a href='mailto:listappqed@gmail.com'>
           Send us an email
         </a>
