index.html: moving data source to bottom of page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       .screenshots { min-width: 473px; margin: 0 auto; }
       .screenshots img { height: 700px; border-radius: 45px; padding: 8px; }
       #apple-store { height: 65px; margin-top: 5px; margin-bottom: 20px; } 
-      .questions a { color: red; text-decoration: none; font-size: larger; margin-bottom: 7px; }
-      .questions-link { color: red; text-decoration: none; font-size: larger; margin-top: 0; }
+      .questions { margin-bottom: 7px; }
+      .questions-link { font-size: larger; margin-top: 0; }
+      .questions-link a { color: red; text-decoration: none; }
       .compiled    { font-size: smaller; margin-top: 45px; margin-bottom: 7px; }
       .compiled-link { font-size: smaller; padding-bottom: 80px; margin-top: 0; }
       .compiled-link a { font-size: smaller; color: blue; }
