index.html: moving data source to bottom of page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       .questions { margin-bottom: 7px; }
       .questions-link { font-size: larger; margin-top: 0; }
       .questions-link a { color: red; text-decoration: none; }
+      .questions-link a > button { color: red; background-color: #f0f0f0; border: 1px solid black; border-radius: 10px; padding: 12px; font-size: 20px; box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; }
       .compiled    { font-size: smaller; margin-top: 45px; margin-bottom: 7px; }
       .compiled-link { font-size: smaller; padding-bottom: 80px; margin-top: 0; }
       .compiled-link a { font-size: smaller; color: blue; }
@@ -57,7 +58,9 @@
       </p>
       <p class='questions-link'>
         <a href='mailto:listappqed@gmail.com'>
-          Send us an email
+          <button type='button'>
+            Send us an email
+          </button>
         </a>
       </p>
 
