--- a/privacy.html
+++ b/privacy.html
@@ -1,7 +1,34 @@
 <html>
   <head>
+    <title>The List App</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <style>
+      body         { font-size: x-large; font-family: sans-serif; }
+      .header      { color: red; margin-top: 15px; }
+      .data-link   { color: red; text-decoration: none; }
+      #app-icon    { border-radius: 22px; height: 100px; vertical-align: middle; }
+      .header-text { vertical-align: middle; font-size: larger; }
+      .blurb       { max-width: 700px; margin: 0 auto; }
+      .blurb h3    { font-size: larger; }
+      #main        { min-width: 473px; margin: 40px auto 0 auto; text-align: center; }
+    </style>
   </head>
   <body>
-    We do not collect, use, save, or have access to any of your personal data.
+    <div id='main'>
+
+      <h1 class='header'>
+        <img id='app-icon' src='/images/TheListAppIcon.jpg' alt='The List App Icon' />
+        <span class='header-text'>The List</span>
+      </h1>
+
+      <div class='blurb'>
+        <h3>Privacy Policy</h3>
+        <p>We do not collect, use, save, or have access to any of your personal data.</p>
+      </div>
+
+    </div>
   </body>
 </html>
