--- a/privacy.html
+++ b/privacy.html
@@ -27,6 +27,7 @@
       <div class='blurb'>
         <h3>Privacy Policy</h3>
         <p>We do not collect, use, save, or have access to any of your personal data.</p>
+        <p>- Lawyers</p>
       </div>
 
     </div>
