--- a/privacy.html
+++ b/privacy.html
@@ -20,8 +20,10 @@
     <div id='main'>
 
       <h1 class='header'>
-        <img id='app-icon' src='/images/TheListAppIcon.jpg' alt='The List App Icon' />
-        <span class='header-text'>The List</span>
+        <a href='/'>
+          <img id='app-icon' src='/images/TheListAppIcon.jpg' alt='The List App Icon' />
+          <span class='header-text'>The List</span>
+        </a>
       </h1>
 
       <div class='blurb'>
